--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "babel-polyfill": "^6.7.4",
     "controlkit": "^0.1.9",
     "gsap": "^1.18.2",
+    "npm-run-all": "^3.1.1",
     "sketch-js": "^1.1.1",
-    "three": "^0.77.1"
+    "three": "^0.82.1"
   },
   "devDependencies": {
     "babel-cli": "^6.6.0",
@@ -16,8 +17,6 @@
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
-    "eslint": "^2.3.0",
-    "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.1",
     "npm-run-all": "^1.5.2",
     "watchify": "^3.7.0"
