--- a/package.json
+++ b/package.json
@@ -2,24 +2,26 @@
   "name": "es6-prototype-3D",
   "version": "1.0.0",
   "author": "Bruno Imbrizi",
+  "repository": "-",
   "scripts": {
     "dev": "cross-env NODE_ENV=development gulp",
     "prod": "cross-env NODE_ENV=production gulp"
   },
   "dependencies": {
     "@brunoimbrizi/controlkit": "^0.1.9",
-    "babel-polyfill": "^6.7.4",
     "gsap": "^1.18.2",
     "npm-run-all": "^3.1.1",
     "sketch-js": "^1.1.1",
     "stats.js": "^0.17.0",
-    "three": "^0.88.0",
+    "three": "^0.92.0",
     "three-trackballcontrols": "0.0.6"
   },
   "devDependencies": {
     "babel-cli": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-env": "^1.6.1",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "cross-env": "^5.1.1",
@@ -31,27 +33,5 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ],
-      "glslify"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
   }
 }
